--- a/css/custom.css
+++ b/css/custom.css
@@ -104,10 +104,55 @@ footer {
 
 footer p, a {
 	color: #8A8A8A;
+	
 }
 
 
 
+#bottom-nav {
+	background-color: black;
+	width: 100%;
+	position: fixed;
+	bottom: 0px;
+	height: 80px;
+	padding: 10px 10px;
+}
+
+.bottom-nav-control {
+	height: 60px;
+	width: 200px;
+	
+
+}
+
+.bottom-nav-control-left {
+	float: left;
+	cursor: pointer;
+}
+
+.bottom-nav-control-right {
+	float: right;
+	cursor: pointer;
+}
+
+.bottom-nav-control-centre {
+	margin-left: auto;
+	margin-right: auto;
+	width: 300px;
+}
 
 
+.bottom-nav-control p, h3 {
+	color: white;
+	opacity: 0.7;
+}
 
+
+.img-trans {
+	opacity: 0.7;
+}
+
+.img-trans:hover {
+	opacity: 1;
+	transition: opacity 0.5s;
+}
