--- a/css/custom-mobile.css
+++ b/css/custom-mobile.css
@@ -1,3 +1,8 @@
+body, html {
+	height: 100%;
+	overflow: hidden;
+}
+
 table td, th {
 	border-left: 0 !important;
 	border-right: 0 !important;
@@ -40,4 +45,44 @@ table td img {
 	background: -o-linear-gradient(#E7FFD6, #F1FFE8, #E7FFD6); /* For Opera 11.1 to 12.0 */
 	background: -moz-linear-gradient(#E7FFD6, #F1FFE8, #E7FFD6); /* For Firefox 3.6 to 15 */
 	background: linear-gradient(#E7FFD6, #F1FFE8, #E7FFD6); /* Standard syntax */
+}
+
+
+
+
+
+
+
+#bottom-nav-mobile {
+
+    background: -webkit-linear-gradient(#2E2E2E, black, black, #2E2E2E); /* For Safari 5.1 to 6.0 */
+	background: -o-linear-gradient(#2E2E2E, black, black, #2E2E2E); /* For Opera 11.1 to 12.0 */
+	background: -moz-linear-gradient(#2E2E2E, black, black, #2E2E2E); /* For Firefox 3.6 to 15 */
+	background: linear-gradient(#2E2E2E, black, black, #2E2E2E); /* Standard syntax */
+	
+	width: 100%;
+	position: fixed;
+	bottom: 0px;
+	height: 60px;
+	padding: 4px 0px;
+	
+	
+}
+
+.bottom-nav-box {
+	height: 100%;
+	width: 33.3%;
+	display: table-cell;
+	padding: 14px;
+}
+
+.bottom-nav-box p {
+	color: white;
+	text-align: center;
+	font-size: medium;
+}
+
+.bottom-nav-box:active {
+	background: rgba(255, 255, 255, 0.2);
+	
 }
