--- a/css/custom-mobile.css
+++ b/css/custom-mobile.css
@@ -1,3 +1,4 @@
+
 body, html {
 	height: 100%;
 	overflow: hidden;
@@ -85,4 +86,42 @@ table td img {
 .bottom-nav-box:active {
 	background: rgba(255, 255, 255, 0.2);
 	
+}
+
+
+
+
+
+
+
+
+
+
+
+.viewport-flip {
+    -webkit-perspective: 1000;
+    position: absolute;
+}
+
+.ui-mobile-viewport-transitioning,
+.ui-mobile-viewport-transitioning .ui-page {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.flip {
+    -webkit-animation-duration: .65s;
+    -webkit-backface-visibility:hidden;
+    -webkit-transform:translateX(0); /* Needed to work around an iOS 3.1 bug that causes listview thumbs to disappear when -webkit-visibility:hidden is used. */
+}
+
+.flip.out {
+    -webkit-transform: rotateY(-180deg) scale(.8);
+    -webkit-animation-name: flipouttoleft;
+}
+
+.flip.in {
+    -webkit-transform: rotateY(0) scale(1);
+    -webkit-animation-name: flipinfromleft;
 }
