--- a/plantsuwa/app/views/layouts/_navbar.html.erb
+++ b/plantsuwa/app/views/layouts/_navbar.html.erb
@@ -16,7 +16,7 @@
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		  <ul class="nav navbar-nav">
+		  <ul class="nav navbar-nav navbar-right">
 			<li><a href="#">Sign Up</a></li>
 			<li><a href="#">Login</a></li>
 			<li><a href="#">Site Map</a></li>
