added family and climate controllers, views.

--- a/plantsuwa/app/views/current_plants/show.html.erb
+++ b/plantsuwa/app/views/current_plants/show.html.erb
@@ -50,4 +50,5 @@
 	
 </div>
 
-<%= link_to 'Back', current_plants_path %>
+<%= link_to 'Back', current_plants_path, class: 'btn-primary' %>
+<%= link_to 'Edit', edit_current_plant_path(@current_plant), class: 'btn-primary' %>
