--- a/plantsuwa/app/views/current_plants/edit.html.erb
+++ b/plantsuwa/app/views/current_plants/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>New Plant!</h1>
- 
+<h1> Edit Plant </h1>
+
 <%= render 'form' %>
  
 <%= link_to 'Back', current_plants_path, class: 'btn-primary' %>
