--- a/plantsuwa/app/assets/stylesheets/custom.css
+++ b/plantsuwa/app/assets/stylesheets/custom.css
@@ -1,9 +1,9 @@
-h1, h2, h3, h4, h5, h6, th {
+h1, h2, h3, h4, h5, h6, th, legend {
 	font-family: 'Montserrat', sans-serif;
 }
 
 
-p, div, td {
+p, div, td, label {
 	font-family: 'Oxygen', sans-serif;
 }
 
@@ -79,4 +79,17 @@ footer p, a {
 	transition: opacity 0.2s;
 }
 
+
+label {
+  margin-top: 15px;
+}
+
+.help-block {
+  margin-bottom: 0px;
+}
+
+
+textarea {
+  resize: vertical;
+}
 
