--- a/plantsuwa/app/views/current_plants/_form.html.erb
+++ b/plantsuwa/app/views/current_plants/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@current_plant, html: { class: 'form-horizontal' }) do |f| %>
+<%= simple_form_for(@current_plant, html: { class: 'form-horizontal' }, defaults: { input_html: { class: 'form-control' } }) do |f| %>
   <% if @current_plant.errors.any? %>
   <div id="error_explanation">
     <h2><%= pluralize(@current_plant.errors.count, "error") %> prohibited this plant from being saved:</h2>
@@ -10,39 +10,49 @@
   </div>
   <% end %>
   
+  <hr/>
+
   <fieldset>
 	  <legend>Naming</legend>
 	  <%= f.input  :name, hint: 'The display name of the Plant' %>
 	  <%= f.input  :species %>
-  	  <%= f.input  :common_name %> 
-  	  <%= f.input  :scientific_name %> 
-  	  <%= f.input  :synonym %> 
-  	  <%= f.input  :subspecies %> 
+  	<%= f.input  :common_name %> 
+  	<%= f.input  :scientific_name %> 
+  	<%= f.input  :synonym %> 
+  	<%= f.input  :subspecies %> 
   </fieldset> 
   
+  <hr/>
+
   <fieldset>
 	  	<legend>Descriptions</legend>
-		<%= f.input  :description, hint: 'Describe the plant in a few lines.'%> 
-    	<%= f.input  :characteristics, hint: 'List the typical characteristics of the plant.' %> 
-    	<%= f.input  :identification, hint: 'How is this plant identified in the field?' %> 
-    	<%= f.input  :physical, hint: 'What are the physcial characteristics of the plant?'%>
+		  <%= f.input  :description, hint: 'Describe the plant in a few lines.', as: :text %> 
+    	<%= f.input  :characteristics, hint: 'List the typical characteristics of the plant.', as: :text  %> 
+    	<%= f.input  :identification, hint: 'How is this plant identified in the field?', as: :text  %> 
+    	<%= f.input  :physical, hint: 'What are the physical characteristics of the plant?', as: :text %>
   </fieldset>
   
+  <hr/>
+
   <fieldset>
 	  <legend>Architectural</legend>
   	  <%= f.input  :environment, hint: 'What sort of environment does this plant enjoy?' %>
   	  <%= f.input  :horticulture %>
   	  <%= f.input  :architectural_uses %>
-	  <%= f.input  :architectural_info %> 
+	    <%= f.input  :architectural_info %> 
   </fieldset>
   
+  <hr/>
+
   <fieldset>
 	  <legend>Cultural</legend>
-  	  <%= f.input  :culture, hint: 'What role does this plant play in different World cultures?' %> 
+  	  <%= f.input  :culture, hint: 'What role does this plant play in different World cultures?', as: :text %> 
   	  <%= f.input  :conservation %> 
   	  <%= f.input  :wildlife, hint: 'Does this plant attract any fauna?' %>
   </fieldset>
    
+  <hr/>
+
   <fieldset>
  	 <legend>Other</legend>
   	 <%= f.input  :location_name, hint: 'Where can this plant be found locally?'%> 
@@ -50,6 +60,8 @@
   	 <%= f.input  :additional_info %> 
   </fieldset>
   
+  <hr/>
+
   <fieldset>
 	  <legend>Historical</legend>
   	  <%= f.input  :discovered_by, hint: 'Biologist credited with discovering this plant.' %>
@@ -58,6 +70,6 @@
 	  
  <br><br>
   <p>
-    <%= f.submit %>
+    <%= f.button :submit, class: "button btn-primary" %>
   </p>
 <% end %>
