--- a/plantsuwa/app/views/welcome/index.html.erb
+++ b/plantsuwa/app/views/welcome/index.html.erb
@@ -3,6 +3,7 @@
 <h2><%= link_to 'Plants List', current_plants_path%></h2>
 <br><br>
 <h3>Other Tables</h3>
+<div main>
 <%= link_to 'Genera', genera_path%><br>
 <%= link_to 'Families', families_path%><br>
 <%= link_to 'Climates', climates_path%><br>
@@ -12,3 +13,4 @@
 <%= link_to 'Sizes', sizes_path%><br>
 <%= link_to 'Types', types_path%><br>
 <%= link_to 'Soil Types', soil_types_path%><br>
+</div>
