starting to add climates to forms

--- a/plantsuwa/app/views/current_plants/_form.html.erb
+++ b/plantsuwa/app/views/current_plants/_form.html.erb
@@ -36,7 +36,8 @@
 
   <fieldset>
 	  <legend>Architectural</legend>
-  	  <%= f.input  :environment, hint: 'What sort of environment does this plant enjoy?' %>
+  	  <%= f.association :climates %>
+	  <%= f.input  :environment, hint: 'What sort of environment does this plant enjoy?' %>
   	  <%= f.input  :horticulture %>
   	  <%= f.input  :architectural_uses %>
 	    <%= f.input  :architectural_info %> 
