--- a/plantsuwa/app/views/layouts/_navbar.html.erb
+++ b/plantsuwa/app/views/layouts/_navbar.html.erb
@@ -9,7 +9,7 @@
 			<span class="icon-bar"></span>
 		  </button>
 		  <a class="navbar-brand" href="http://www.uwa.edu.au" style="margin-top: -10px; margin-left: -10px; margin-right: -10px" target="_blank">			<%= image_tag 'uwacrest-small.gif', width:"30px", alt:"UWA Logo" %>
-		  <a class="navbar-brand" href="index.html">WA Plants</a>
+		  <a class="navbar-brand" href="index.html"><%= small_title(yield(:title)) %></a>
 		  <a class="navbar-brand" style="margin-right: 5px; float: right" href="#"><span class="glyphicon glyphicon-search"></span></a>
 		</div>
 		
