--- a/plantsuwa/app/views/current_plants/show.html.erb
+++ b/plantsuwa/app/views/current_plants/show.html.erb
@@ -19,7 +19,10 @@
 	
 	<h2>Architechural</h2>
 	<dl class="dl-horizontal">
-		<dt>Climates</dt><dd><%= @current_plant.climates %></dd>
+		<dt>Climates</dt>
+		<% @current_plant.climates.each do |climate| %>
+			<dd> <%= @climate.name %></dd>
+		<% end %>
 		<dt>Environment</dt><dd><%= @current_plant.environment %></dd>
 		<dt>Horticulture</dt><dd><%= @current_plant.horticulture %></dd>
 		<dt>Architectural Uses</dt><dd><%= @current_plant.architectural_uses %></dd>
