--- a/plantsuwa/app/views/current_plants/show.html.erb
+++ b/plantsuwa/app/views/current_plants/show.html.erb
@@ -19,8 +19,8 @@
 	
 	<h2>Architechural</h2>
 	<dl class="dl-horizontal">
-		<dt>Climates</dt>
-		<% @current_plant.climates.each do |climate| %>
+		<dt>Climates</dt>		
+		<% for @climate in @current_plant.climates %>
 			<dd> <%= @climate.name %></dd>
 		<% end %>
 		<dt>Environment</dt><dd><%= @current_plant.environment %></dd>
