--- a/plantsuwa/app/assets/stylesheets/custom.css
+++ b/plantsuwa/app/assets/stylesheets/custom.css
@@ -4,7 +4,7 @@ h1, h2, h3, h4, h5, h6, th, legend {
 }
 
 
-p, div, td, label {
+p, div, td, label, dd, dt {
 	font-family: 'Oxygen', sans-serif;
 }
 
