--- a/plantsuwa/app/views/current_plants/index.html.erb
+++ b/plantsuwa/app/views/current_plants/index.html.erb
@@ -6,22 +6,36 @@
 
 <table class="table table-bordered">
 	<tr>
-		<th>Name</th>
-		<th>Scientific Name</th>
-		<th>Description</th>
-		<th colspan="3"></th>
+		<th width="10%"></th>
+		<th width="20%">Name</th>
+		<th width="20%">Scientific name</th>
+		<th width="40%">Description</th>
+		<th width="10%"></th>
 	</tr>
 	
+  <tbody>
+
 	<% @current_plants.each do |plant| %>
 	<tr>
-		<td><%= plant.name %></td>
-		<td><%= plant.scientific_name %></td>
-		<td><%= plant.description %></td>
+
+    <td style="padding: 3px"><%= image_tag 'plants/rose_1_small.jpg', width:"30px", alt:"Rose", class: "img-circle" %></td>
+		<td><%= truncate(plant.name, length: 20) %></td>
+		<td><%= truncate(plant.scientific_name, length: 20) %></td>
+		<td><%= truncate(plant.description, length: 50) %></td>
 		<td><%= link_to 'Show', current_plant_path(plant) %></td>
+
+
+    <!-- Not really necessary, I think. Not for users anyway
+
 		<td><%= link_to 'Edit', edit_current_plant_path(plant) %></td>
 		<td><%= link_to 'Delete', current_plant_path(plant), method: :delete, data: { confirm: 'Are you sure?'} %></td>
+
+    -->
 	</tr>
 	<% end %>
+
+  </tbody>
+
 </table>
 
 <p><strong>Total Number of Plants: </strong><%= @current_plants.count %></p>
