finished pagination on the plants show page
I added some nice tabs, it looks a lot better now. It also disables tabs that contain no information (so the user doesn't open a tab with nothing in it. I wrote a helper method and some JQuery for that. Check it out in app/views/current_plants/show.html.erb. I also made another attempt to stop git syncing the log and tmp files, so I hope that works.

--- a/plantsuwa/app/assets/stylesheets/custom.css
+++ b/plantsuwa/app/assets/stylesheets/custom.css
@@ -95,7 +95,7 @@ footer p, a {
 	transition: opacity 0.2s;
 }
 
-table 
+
 
 label {
   margin-top: 15px;
@@ -111,16 +111,47 @@ textarea {
 }
 
 .info-tab {
-  width: 14%;
+  width: 14.285714286%;
   border-top: 2px solid #ccc;
   border-bottom: 2px solid #ccc;
   float: left;
   padding: 0 5px;
   padding-top: 7px;
-  border-right: 2px solid #ccc;
+  border-right: 1px solid #ccc;
+  background: #eee;
+	box-shadow: 2px 2px 8px #ccc;
+  
+}
+
+.info-tab:hover {
+  cursor: pointer;
+}
+
+.info-tab-current {
+  background: white;
+  border-bottom: 0;  
+  box-shadow: none;
+}
+
+.info-tab-current:hover {
+  cursor: auto;
+}
+
+.info-tab-disabled {
+  background: #ddd;
+}
+
+.info-tab-disabled:hover {
+  cursor: not-allowed;
 }
 
 .info-tab p {
 	font-family: 'Montserrat', sans-serif;
+  text-align: center;
+  font-size: x-small;
+}
+
+.info-tab-disabled p {
+	color: gray;
 }
 
