--- a/plantsuwa/app/assets/stylesheets/custom-mobile.css
+++ b/plantsuwa/app/assets/stylesheets/custom-mobile.css
@@ -77,15 +77,18 @@ table th img {
 
 #bottom-nav-mobile {
 
-    background: -webkit-linear-gradient(#2E2E2E, black, black, #2E2E2E); /* For Safari 5.1 to 6.0 */
+  background: black;
+
+  background: -webkit-linear-gradient(#2E2E2E, black, black, #2E2E2E); /* For Safari 5.1 to 6.0 */
 	background: -o-linear-gradient(#2E2E2E, black, black, #2E2E2E); /* For Opera 11.1 to 12.0 */
 	background: -moz-linear-gradient(#2E2E2E, black, black, #2E2E2E); /* For Firefox 3.6 to 15 */
 	background: linear-gradient(#2E2E2E, black, black, #2E2E2E); /* Standard syntax */
+
 	
 	width: 100%;
 	position: fixed;
 	bottom: 0px;
-	height: 60px;
+	height: 50px;
 	padding: 4px 0px;
 	
 	
@@ -95,13 +98,14 @@ table th img {
 	height: 100%;
 	width: 33.3%;
 	display: table-cell;
-	padding: 14px;
+
+  float: left;
+  padding-top: 7px;
 }
 
 .bottom-nav-box p {
 	color: white;
-	text-align: center;
-	font-size: medium;
+	font-size: small;
 }
 
 .bottom-nav-box:active {
@@ -109,40 +113,9 @@ table th img {
 	
 }
 
-
-
-
-
-
-
-
-
-
-
-.viewport-flip {
-    -webkit-perspective: 1000;
-    position: absolute;
-}
-
-.ui-mobile-viewport-transitioning,
-.ui-mobile-viewport-transitioning .ui-page {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-}
-
-.flip {
-    -webkit-animation-duration: .65s;
-    -webkit-backface-visibility:hidden;
-    -webkit-transform:translateX(0); /* Needed to work around an iOS 3.1 bug that causes listview thumbs to disappear when -webkit-visibility:hidden is used. */
-}
-
-.flip.out {
-    -webkit-transform: rotateY(-180deg) scale(.8);
-    -webkit-animation-name: flipouttoleft;
-}
-
-.flip.in {
-    -webkit-transform: rotateY(0) scale(1);
-    -webkit-animation-name: flipinfromleft;
+.bottom-nav-box-content {
+  width: auto;
+  height: 100%;
+  margin-top: 4px;
+  padding: 0 3px;
 }
