--- a/plantsuwa/app/views/current_plants/show.html.erb
+++ b/plantsuwa/app/views/current_plants/show.html.erb
@@ -1,3 +1,5 @@
+<% provide(:title, @current_plant.name) %>
+
 <div style="margin-top: 4px; margin-bottom: 55px;">
     <div id="btn-photos" class="info-tab">
       <p>Photos</p>
@@ -192,6 +194,10 @@
   <h2>Photos</h2>
   <p>Nothing here yet, sorry!</p>
 </div>
+
+
+<%= render 'bottom_nav_plants' %>
+
 
 <script>
   $('#btn-naming').on('click', function () {
