--- a/plantsuwa/app/assets/stylesheets/custom.css
+++ b/plantsuwa/app/assets/stylesheets/custom.css
@@ -119,7 +119,7 @@ textarea {
   padding-top: 7px;
   border-right: 1px solid #ccc;
   background: #eee;
-	box-shadow: 2px 2px 8px #ccc;
+	box-shadow: 0px 2px 8px #ccc;
   
 }
 
@@ -159,4 +159,33 @@ textarea {
   display: table;
   margin: 0 auto;
 }
+
+
+
+.info-body {
+  min-height: 400px;
+}
+
+
+
+.action-tab {
+  width: 50%;
+  border-top: 2px solid #ccc;
+  border-bottom: 2px solid #ccc;
+  float: left;
+  padding: 3px 5px;
+
+  border-right: 1px solid #ccc;
+  background: #eee;
+	box-shadow: 0 -2px 8px #ccc;  
+  position: fixed;
+  height: 30px;
+  bottom: 50px;
+}
+
+.action-tab:hover {
+  cursor: pointer;
+}
+
+
 
